Fixing Computer View Spacing: Part 1

--- a/styles.css
+++ b/styles.css
@@ -335,6 +335,10 @@
     margin-top: 50px;
 }
 
+#clockPannel {
+    margin-top: 25px;
+}
+
 @keyframes hide {
     0% {opacity: 0;}
     25% {opacity: 0;}
